# IoTUI

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
.opencode/plans/: mqtt-12-issues-fix.md  opcua-passthrough-fix.md  settings-panel-protocol-audit.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  modbus.rs  mqtt.rs  opcua.rs
src-tauri/src/modbus/: client.rs  manager.rs  mod.rs  simulator.rs  types.rs
src-tauri/src/mqtt/: broker.rs  client.rs  manager.rs  mod.rs  simulator.rs  types.rs
src-tauri/src/ua_client/: client.rs  manager.rs  manager_tests.rs  mod.rs  real_client.rs  simulator.rs  types.rs
src/components/charts/: DashboardSparkline.tsx  Gauge.tsx  RealtimeChart.tsx  Sparkline.tsx
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx
src/components/modbus/: ModbusConnectionPanel.tsx  ModbusDashboard.tsx  ModbusDataExport.tsx  RegisterBrowser.tsx  RegisterMonitor.tsx
src/components/mqtt/: BrokerAdminPanel.tsx  MqttConnectionPanel.tsx  MqttDashboard.tsx  MqttExplorer.tsx  MqttMessageStream.tsx  MqttPublishPanel.tsx  MqttSubscriptionManager.tsx  PublishDrawer.tsx  TopicExplorer.tsx
src/components/opcua/: AddressSpaceTree.tsx  ConnectionPanel.tsx  Dashboard.tsx  (+9 more)
src/hooks/: useAutoRefresh.ts  useContainerWidth.ts  usePolling.ts
src/services/: logger.ts  modbus.ts  mqtt.ts  opcua.test.ts  opcua.ts
src/stores/: appStore.test.ts  appStore.ts  browserStore.ts  connectionStore.test.ts  connectionStore.ts  logStore.ts  modbusConnectionStore.ts  modbusMonitorStore.ts  modbusRegisterStore.ts  mqttBrokerStore.ts  mqttConnectionStore.ts  mqttSubscriptionStore.ts  mqttTopicStore.ts  notificationStore.ts  settingsStore.ts  subscriptionStore.test.ts  subscriptionStore.ts  themeStore.ts
src/styles/: globals.css
src/themes/: index.ts
src/types/: modbus.ts  mqtt.ts  opcua.ts
src/utils/: errors.ts  modbus.ts  mqtt.ts  opcua.ts  stats.ts  theme.ts
(+18 files in other folders)
