[package]
name = "iotui"
version = "0.1.0"
description = "Industrial IoT Utility"
authors = ["IoTUI"]
edition = "2021"

[lib]
name = "iotui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
parking_lot = "0.12"
rand = "0.8"

# Real OPC UA client support
async-opcua = { version = "0.18", features = ["client"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
