[package]
name = "iotui"
version = "0.1.0"
description = "Industrial IoT Utility"
authors = ["IoTUI"]
edition = "2021"

[lib]
name = "iotui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
parking_lot = "0.12"
rand = "0.8"
futures-util = "0.3"

# OPC UA client support
async-opcua = { version = "0.18", features = ["client"] }

# MQTT client support
rumqttc = { version = "0.24", features = ["use-rustls"] }
# Embedded MQTT broker
rumqttd = "0.19"
# TLS support for MQTT
rustls-pemfile = "2"
webpki-roots = "0.26"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
